--- a/index.html
+++ b/index.html
@@ -1,55 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coffee Website</title>
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-  <script src="https://unpkg.com/@phosphor-icons/web"></script>
-  
-  
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Tentang.html">Tentang</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="galeri.html">Galeri</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Kontak.html">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <h1 class="text-center">SELAMAT DTANG</h1>
+    <!-- Header & Navbar -->
+    <header class="bg-dark text-light">
+        <nav class="navbar navbar-expand-lg navbar-dark container">
+            <a class="navbar-brand" href="#">Coffee </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#gallery">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="text-center py-5">
+            <h1>Selamat Datang di coffee shop</h1>
+            <p>Your best coffee experience</p>
+        </div>
+    </header>
 
-  <footer class="footer">
-    <p> &copy; dede 231011700552</p>
-   </footer>
-   <script>
-    // Menambahkan interaksi sederhana
-    document.addEventListener('DOMContentLoaded', function() {
-      const welcomeMessage = document.querySelector('h1');
-      welcomeMessage.addEventListener('click', function() {
-        alert('Selamat datang di situs kami!');
-      });
-    });
-  </script>
- 
+    <!-- Gallery Section -->
+    <section id="gallery" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Gallery</h2>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card">
+                        <div class="ratio ratio-3x4">
+                            <img src="img/img-3.png" class="card-img-top" alt="Coffee 1">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Coffee luwak</h5>
+                            <img src="img/kopi.jpg.png" width="200px" height="200px" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card">
+                        <div class="ratio ratio-3x4">
+                            <img src="img/img-5.png" class="card-img-top" alt="Coffee 2">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Coffee expreso</h5>
+                          <img src="img/img-5.png" width="200px" height="200px">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card">
+                        <div class="ratio ratio-3x4">
+                            <img src="img/img-6.png" class="card-img-top" alt="Coffee 3">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Coffee 3</h5>
+                           <img src="img/img-3.png" width="200px" height="200px" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card">
+                        <div class="ratio ratio-3x4">
+                            <img src="img/kopi.jpg.png" class="card-img-top" alt="Coffee 4">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Coffee 4</h5>
+                            <img src="img/img-6.png" width="200px" height="200px" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card">
+                        <div class="ratio ratio-3x4">
+                            <img src="img/img-5.png" class="card-img-top" alt="Coffee 5">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Coffee 5</h5>
+                            <img src="img/img-5.png" width="200px" height="200px" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card">
+                        <div class="ratio ratio-3x4">
+                            <img src="img/img-3.png" class="card-img-top" alt="Coffee 6">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Coffee 6</h5>
+                            <img src="img/img-3.png" width="200px" alt="logo">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+        <!-- Data Diri Section -->
+        <section id="contact" class="py-5 bg-light">
+            <div class="container">
+                <h2 class="text-center mb-4">Data Diri</h2>
+                <div class="row justify-content-center" >
+                    <div class="col-lg-6">
+                        <ul class="list-group">
+                            <li class="list-group-item"><strong>Nama:</strong> Dede Saepuloh</li>
+                            <li class="list-group-item"><strong>Kelas:</strong> [Sife009]</li>
+                            <li class="list-group-item"><strong>NIM:</strong> [231011700552]</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+    
+
+    <!-- Footer -->
+    <footer class="bg-dark text-light py-4">
+        <div class="container text-center">
+            <p>&copy; 2024 Coffee Shop. Dede </p>
+        </div>
+    </footer>
+
+    <!-- Bootstrap 5 JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
